[gd_scene load_steps=12 format=2]

[ext_resource path="res://Tester.gd" type="Script" id=1]
[ext_resource path="res://assets/Arbitrum.png" type="Texture" id=2]
[ext_resource path="res://assets/Avalanche.png" type="Texture" id=3]
[ext_resource path="res://assets/Ethereum.png" type="Texture" id=4]
[ext_resource path="res://NewTest.gd" type="Script" id=5]
[ext_resource path="res://assets/EmptyButton.png" type="Texture" id=7]
[ext_resource path="res://assets/Optimism.png" type="Texture" id=8]
[ext_resource path="res://SettingsSlider.gd" type="Script" id=9]
[ext_resource path="res://assets/Chainlink.png" type="Texture" id=10]
[ext_resource path="res://SavedTestsList.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/Base.png" type="Texture" id=12]

[node name="Tester" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Backdrop" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="HTTP" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="StartTest" type="Button" parent="."]
visible = false
margin_left = 135.0
margin_top = 293.0
margin_right = 228.0
margin_bottom = 323.0
mouse_default_cursor_shape = 2
text = "Start Test"

[node name="SavedTests" type="Label" parent="."]
margin_left = 39.0
margin_top = 66.0
margin_right = 114.0
margin_bottom = 80.0
text = "Saved Tests"

[node name="Senders" type="ColorRect" parent="."]
margin_left = 254.0
margin_top = 35.0
margin_right = 319.0
margin_bottom = 80.0
color = Color( 1, 1, 1, 0 )

[node name="Recipients" type="ColorRect" parent="."]
margin_left = 823.0
margin_top = 35.0
margin_right = 888.0
margin_bottom = 82.0
color = Color( 1, 1, 1, 0 )

[node name="SavedTestsList" parent="." instance=ExtResource( 11 )]

[node name="Spawner" type="Control" parent="."]
margin_left = 536.0
margin_top = 98.0
margin_right = 576.0
margin_bottom = 138.0

[node name="Overlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="New Test" type="Button" parent="."]
margin_left = 18.0
margin_top = 4.0
margin_right = 97.0
margin_bottom = 54.0
mouse_default_cursor_shape = 2
text = "New Test"
script = ExtResource( 5 )

[node name="SlideTween" type="Tween" parent="New Test"]

[node name="NetworkButtons" type="Panel" parent="New Test"]
margin_left = -371.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 481.0

[node name="Frames" type="Control" parent="New Test/NetworkButtons"]
margin_right = 40.0
margin_bottom = 40.0

[node name="EmptyFrame" type="TextureRect" parent="New Test/NetworkButtons/Frames"]
margin_right = 100.0
margin_bottom = 100.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame2" type="TextureRect" parent="New Test/NetworkButtons/Frames"]
margin_left = 70.0
margin_right = 170.0
margin_bottom = 100.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame3" type="TextureRect" parent="New Test/NetworkButtons/Frames"]
margin_left = 140.0
margin_right = 240.0
margin_bottom = 100.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame4" type="TextureRect" parent="New Test/NetworkButtons/Frames"]
margin_left = 210.0
margin_right = 310.0
margin_bottom = 100.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame5" type="TextureRect" parent="New Test/NetworkButtons/Frames"]
margin_left = 280.0
margin_right = 380.0
margin_bottom = 100.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame6" type="TextureRect" parent="New Test/NetworkButtons/Frames"]
margin_top = 70.0
margin_right = 100.0
margin_bottom = 170.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame7" type="TextureRect" parent="New Test/NetworkButtons/Frames"]
margin_left = 70.0
margin_top = 70.0
margin_right = 170.0
margin_bottom = 170.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame8" type="TextureRect" parent="New Test/NetworkButtons/Frames"]
margin_left = 140.0
margin_top = 70.0
margin_right = 240.0
margin_bottom = 170.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame9" type="TextureRect" parent="New Test/NetworkButtons/Frames"]
margin_left = 210.0
margin_top = 70.0
margin_right = 310.0
margin_bottom = 170.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame10" type="TextureRect" parent="New Test/NetworkButtons/Frames"]
margin_left = 280.0
margin_top = 70.0
margin_right = 380.0
margin_bottom = 170.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="Ethereum Sepolia" type="TextureButton" parent="New Test/NetworkButtons"]
margin_left = 15.0
margin_top = 7.0
margin_right = 55.0
margin_bottom = 74.0
rect_scale = Vector2( 1, 0.8 )
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )

[node name="Overlay" type="ColorRect" parent="New Test/NetworkButtons/Ethereum Sepolia"]
margin_left = -15.0
margin_top = -6.0
margin_right = 85.0
margin_bottom = 112.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="Arbitrum Sepolia" type="TextureButton" parent="New Test/NetworkButtons"]
margin_left = 80.0
margin_top = 6.0
margin_right = 130.0
margin_bottom = 61.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )

[node name="Overlay" type="ColorRect" parent="New Test/NetworkButtons/Arbitrum Sepolia"]
margin_left = -10.0
margin_top = -4.0
margin_right = 87.0
margin_bottom = 93.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="Optimism Sepolia" type="TextureButton" parent="New Test/NetworkButtons"]
margin_left = 150.0
margin_top = 9.0
margin_right = 200.0
margin_bottom = 64.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )

[node name="Overlay" type="ColorRect" parent="New Test/NetworkButtons/Optimism Sepolia"]
margin_left = -10.0
margin_top = -9.0
margin_right = 90.0
margin_bottom = 91.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="Base Sepolia" type="TextureButton" parent="New Test/NetworkButtons"]
margin_left = 220.0
margin_top = 9.0
margin_right = 270.0
margin_bottom = 64.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 12 )

[node name="Overlay" type="ColorRect" parent="New Test/NetworkButtons/Base Sepolia"]
margin_left = -10.0
margin_top = -9.0
margin_right = 90.0
margin_bottom = 91.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="Avalanche Fuji" type="TextureButton" parent="New Test/NetworkButtons"]
visible = false
margin_left = 290.0
margin_top = 10.0
margin_right = 340.0
margin_bottom = 65.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )

[node name="Overlay" type="ColorRect" parent="New Test/NetworkButtons/Avalanche Fuji"]
margin_left = -10.0
margin_top = -10.0
margin_right = 90.0
margin_bottom = 90.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="Prompt" type="Label" parent="New Test"]
margin_left = -289.0
margin_top = 145.0
margin_right = -67.0
margin_bottom = 261.0
text = "Choose sender networks and
provide local token addresses.
You must have a balance to
run tests."

[node name="AddressEntry" type="LineEdit" parent="New Test"]
margin_left = -345.0
margin_top = 276.0
margin_right = -34.0
margin_bottom = 300.0

[node name="NetworkLabel" type="Label" parent="New Test"]
margin_left = -364.0
margin_top = 230.0
margin_right = -21.0
margin_bottom = 244.0
align = 1

[node name="GasBalance" type="Label" parent="New Test"]
margin_left = -364.0
margin_top = 250.0
margin_right = -21.0
margin_bottom = 264.0
align = 1

[node name="TokenLabel" type="Label" parent="New Test"]
margin_left = -366.0
margin_top = 319.0
margin_right = -20.0
margin_bottom = 333.0
align = 1

[node name="TokenBalance" type="Label" parent="New Test"]
margin_left = -366.0
margin_top = 342.0
margin_right = -20.0
margin_bottom = 356.0
align = 1

[node name="Confirm" type="Button" parent="New Test"]
margin_left = -243.0
margin_top = 430.0
margin_right = -127.0
margin_bottom = 450.0
mouse_default_cursor_shape = 2
text = "Confirm Choices"

[node name="AddNetwork" type="Button" parent="New Test"]
margin_left = -231.0
margin_top = 388.0
margin_right = -137.0
margin_bottom = 408.0
mouse_default_cursor_shape = 2
text = "Add Network"

[node name="ScanLink" type="RichTextLabel" parent="New Test"]
visible = false
margin_left = -288.0
margin_top = 362.0
margin_right = -79.0
margin_bottom = 377.0
bbcode_enabled = true
bbcode_text = "[center][u]Scanner Link[/u][/center]"
text = "Scanner Link"

[node name="ScanLink" type="TextureButton" parent="New Test/ScanLink"]
margin_left = 64.0
margin_right = 143.0
margin_bottom = 15.0
mouse_default_cursor_shape = 2

[node name="FinalConfirm" type="Label" parent="New Test"]
margin_left = -357.0
margin_top = 147.0
margin_right = -12.0
margin_bottom = 382.0

[node name="Settings" type="Button" parent="."]
margin_left = 931.0
margin_top = 548.0
margin_right = 1010.0
margin_bottom = 598.0
mouse_default_cursor_shape = 2
text = "Settings"
script = ExtResource( 9 )

[node name="SlideTween" type="Tween" parent="Settings"]

[node name="NetworkButtons" type="Panel" parent="Settings"]
margin_left = 79.0
margin_top = -431.0
margin_right = 452.0
margin_bottom = 52.0

[node name="Frames" type="Control" parent="Settings/NetworkButtons"]
margin_left = 21.0
margin_top = 340.0
margin_right = 61.0
margin_bottom = 380.0

[node name="EmptyFrame" type="TextureRect" parent="Settings/NetworkButtons/Frames"]
margin_right = 100.0
margin_bottom = 100.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame2" type="TextureRect" parent="Settings/NetworkButtons/Frames"]
margin_left = 70.0
margin_right = 170.0
margin_bottom = 100.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame3" type="TextureRect" parent="Settings/NetworkButtons/Frames"]
margin_left = 140.0
margin_right = 240.0
margin_bottom = 100.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame4" type="TextureRect" parent="Settings/NetworkButtons/Frames"]
margin_left = 210.0
margin_right = 310.0
margin_bottom = 100.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame5" type="TextureRect" parent="Settings/NetworkButtons/Frames"]
margin_left = 280.0
margin_right = 380.0
margin_bottom = 100.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame6" type="TextureRect" parent="Settings/NetworkButtons/Frames"]
margin_top = 70.0
margin_right = 100.0
margin_bottom = 170.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame7" type="TextureRect" parent="Settings/NetworkButtons/Frames"]
margin_left = 70.0
margin_top = 70.0
margin_right = 170.0
margin_bottom = 170.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame8" type="TextureRect" parent="Settings/NetworkButtons/Frames"]
margin_left = 140.0
margin_top = 70.0
margin_right = 240.0
margin_bottom = 170.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame9" type="TextureRect" parent="Settings/NetworkButtons/Frames"]
margin_left = 210.0
margin_top = 70.0
margin_right = 310.0
margin_bottom = 170.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="EmptyFrame10" type="TextureRect" parent="Settings/NetworkButtons/Frames"]
margin_left = 280.0
margin_top = 70.0
margin_right = 380.0
margin_bottom = 170.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="Chainlink" type="TextureButton" parent="Settings/NetworkButtons"]
margin_left = 32.0
margin_top = 351.0
margin_right = 82.0
margin_bottom = 418.0
rect_scale = Vector2( 1, 0.8 )
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 10 )

[node name="Overlay" type="ColorRect" parent="Settings/NetworkButtons/Chainlink"]
margin_left = -11.0
margin_top = -11.25
margin_right = 89.0
margin_bottom = 106.75
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="Ethereum Sepolia" type="TextureButton" parent="Settings/NetworkButtons"]
margin_left = 107.0
margin_top = 346.0
margin_right = 147.0
margin_bottom = 413.0
rect_scale = Vector2( 1, 0.8 )
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )

[node name="Overlay" type="ColorRect" parent="Settings/NetworkButtons/Ethereum Sepolia"]
margin_left = -15.0
margin_top = -6.0
margin_right = 85.0
margin_bottom = 112.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="Arbitrum Sepolia" type="TextureButton" parent="Settings/NetworkButtons"]
margin_left = 171.0
margin_top = 345.0
margin_right = 221.0
margin_bottom = 400.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )

[node name="Overlay" type="ColorRect" parent="Settings/NetworkButtons/Arbitrum Sepolia"]
margin_left = -10.0
margin_top = -4.0
margin_right = 87.0
margin_bottom = 93.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="Optimism Sepolia" type="TextureButton" parent="Settings/NetworkButtons"]
margin_left = 242.0
margin_top = 348.0
margin_right = 292.0
margin_bottom = 403.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )

[node name="Overlay" type="ColorRect" parent="Settings/NetworkButtons/Optimism Sepolia"]
margin_left = -10.0
margin_top = -9.0
margin_right = 90.0
margin_bottom = 91.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="Base Sepolia" type="TextureButton" parent="Settings/NetworkButtons"]
margin_left = 311.0
margin_top = 349.0
margin_right = 361.0
margin_bottom = 404.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 12 )

[node name="Overlay" type="ColorRect" parent="Settings/NetworkButtons/Base Sepolia"]
margin_left = -10.0
margin_top = -9.0
margin_right = 90.0
margin_bottom = 91.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="Avalanche Fuji" type="TextureButton" parent="Settings/NetworkButtons"]
visible = false
margin_left = 32.0
margin_top = 418.0
margin_right = 82.0
margin_bottom = 473.0
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )

[node name="Overlay" type="ColorRect" parent="Settings/NetworkButtons/Avalanche Fuji"]
margin_left = -10.0
margin_top = -10.0
margin_right = 90.0
margin_bottom = 90.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="NetworkInfo" type="Control" parent="Settings"]
margin_left = 114.0
margin_top = -365.0
margin_right = 154.0
margin_bottom = -325.0

[node name="Chainlink" type="Control" parent="Settings/NetworkInfo"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Settings/NetworkInfo/Chainlink"]
margin_left = 2.0
margin_top = -57.0
margin_right = 58.0
margin_bottom = -43.0
text = "Address:"

[node name="Address" type="LineEdit" parent="Settings/NetworkInfo/Chainlink"]
margin_top = -39.0
margin_right = 326.0
margin_bottom = -14.0
editable = false

[node name="Label2" type="Label" parent="Settings/NetworkInfo/Chainlink"]
margin_left = 2.0
margin_top = 3.0
margin_right = 77.0
margin_bottom = 17.0
text = "Private Key:"

[node name="PrivateKey" type="LineEdit" parent="Settings/NetworkInfo/Chainlink"]
margin_top = 21.0
margin_right = 326.0
margin_bottom = 46.0
editable = false

[node name="ShowKey" type="Button" parent="Settings/NetworkInfo/Chainlink"]
margin_left = 97.0
margin_top = 60.0
margin_right = 217.0
margin_bottom = 80.0
mouse_default_cursor_shape = 2
text = "Show Private Key"

[node name="Network" type="Control" parent="Settings/NetworkInfo"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Save" type="Button" parent="Settings/NetworkInfo/Network"]
margin_left = 103.0
margin_top = -34.0
margin_right = 219.0
margin_bottom = -14.0
mouse_default_cursor_shape = 2
text = "Save Changes"

[node name="RestoreDefaults" type="Button" parent="Settings/NetworkInfo/Network"]
margin_left = 73.0
margin_top = 234.0
margin_right = 248.0
margin_bottom = 254.0
mouse_default_cursor_shape = 2
text = "Restore Network Defaults"

[node name="Network" type="Label" parent="Settings/NetworkInfo/Network"]
margin_left = 108.0
margin_top = 6.0
margin_right = 215.0
margin_bottom = 20.0
text = "Network"
align = 1

[node name="Label" type="Label" parent="Settings/NetworkInfo/Network"]
margin_left = 2.0
margin_top = 30.0
margin_right = 59.0
margin_bottom = 44.0
text = "RPC URL:"

[node name="RPC" type="LineEdit" parent="Settings/NetworkInfo/Network"]
margin_top = 48.0
margin_right = 326.0
margin_bottom = 73.0

[node name="Label2" type="Label" parent="Settings/NetworkInfo/Network"]
margin_left = 2.0
margin_top = 86.0
margin_right = 125.0
margin_bottom = 100.0
text = "Maximum Gas Fee:"

[node name="GasFee" type="LineEdit" parent="Settings/NetworkInfo/Network"]
margin_top = 104.0
margin_right = 326.0
margin_bottom = 129.0

[node name="Label3" type="Label" parent="Settings/NetworkInfo/Network"]
margin_left = 2.0
margin_top = 141.0
margin_right = 125.0
margin_bottom = 155.0
text = "Endpoint Contract:"

[node name="Endpoint" type="LineEdit" parent="Settings/NetworkInfo/Network"]
margin_top = 159.0
margin_right = 326.0
margin_bottom = 184.0

[node name="ScanLink" type="RichTextLabel" parent="Settings/NetworkInfo/Network"]
margin_left = 53.0
margin_top = 192.0
margin_right = 262.0
margin_bottom = 207.0
bbcode_enabled = true
bbcode_text = "[center][u]Scanner Link[/u][/center]"
text = "Scanner Link"

[node name="ScanLink" type="TextureButton" parent="Settings/NetworkInfo/Network/ScanLink"]
margin_left = 64.0
margin_right = 143.0
margin_bottom = 15.0
mouse_default_cursor_shape = 2
